--- a/.config/pipewire/pipewire.config
+++ b/.config/pipewire/pipewire.config
@@ -42,10 +42,10 @@ context.properties = {
     ## Properties for the DSP configuration.
     default.clock.rate          = 96000
     default.clock.allowed-rates = [ 44100 48000 96000 ]
-    #default.clock.quantum       = 1024
-    #default.clock.min-quantum   = 32
-    #default.clock.max-quantum   = 2048
-    #default.clock.quantum-limit = 8192
+    default.clock.quantum       = 1024
+    default.clock.min-quantum   = 32
+    default.clock.max-quantum   = 2048
+    default.clock.quantum-limit = 8192
     #default.clock.quantum-floor = 4
     #default.video.width         = 640
     #default.video.height        = 480
