--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,8 @@ bind-key l select-pane -R
 
 set-option -g status-position top
 
+set -s set-clipboard on
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
