--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+set -g base-index 1
+setw -g pane-base-index 1 
+
 set -g mouse on
 
 bind-key h select-pane -L
