--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+set-option -g default-shell /usr/bin/fish
+
 set -g base-index 1
 setw -g pane-base-index 1 
 
