--- a/.config/nvim/.luarc.json
+++ b/.config/nvim/.luarc.json
@@ -2,5 +2,7 @@
     "diagnostics.globals": [
         "vim",
         "Snacks"
-    ]
+    ],
+    "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
+    "workspace.library": ["~/.local/share/nvim/lazy"]
 }
